modulo registros de inquilinos add

--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -179,7 +179,7 @@
 					<a [routerLink]="'/index'"><i data-feather="home"></i> <span>Dashboard</span></a>
 				</li>
         <li [class.active]="base === 'gestion-inquilinos'">
-					<a [routerLink]="'/gestion-inquilinos'"><i data-feather="users"></i> <span>Inquilinos</span></a>
+					<a [routerLink]="'/inquilinos/registros-inquilinos'"><i data-feather="users"></i> <span>Inquilinos</span></a>
 
         </li>
 				<li [class.active]="base === 'customers'">
