registro de inquilino con notificacion

--- a/src/app/all-modules/ui interface/elements/notification/notification.component.html
+++ b/src/app/all-modules/ui interface/elements/notification/notification.component.html
@@ -1,7 +1,7 @@
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
                 <div class="content container-fluid">
-				
+
 					<!-- Page Header -->
 					<div class="page-header">
 						<div class="row">
@@ -13,13 +13,13 @@
 								</ul>
 							</div>
 						</div>
-					</div>	
-					<!-- /Page Header -->					
-					
+					</div>
+					<!-- /Page Header -->
+
 					<div class="row">
-					
+
 						<!-- Alert -->
-						<div class="col-md-4">	
+						<div class="col-md-4">
 							<div class="card">
 								<div class="card-header">
 									<div class="card-title">Alert</div>
@@ -30,9 +30,9 @@
 							</div>
 						</div>
 						<!-- /Alert -->
-						
+
 						<!-- Alert -->
-						<div class="col-md-4">	
+						<div class="col-md-4">
 							<div class="card">
 								<div class="card-header">
 									<div class="card-title">Confirm</div>
@@ -43,9 +43,9 @@
 							</div>
 						</div>
 						<!-- /Alert -->
-						
+
 						<!-- Alert -->
-						<div class="col-md-4">	
+						<div class="col-md-4">
 							<div class="card">
 								<div class="card-header">
 									<div class="card-title">Prompt</div>
@@ -56,12 +56,12 @@
 							</div>
 						</div>
 						<!-- /Alert -->
-						
+
 						<!-- Alert -->
-						<div class="col-md-4">	
+						<div class="col-md-4">
 							<div class="card">
 								<div class="card-header">
-									<div class="card-title">Success Alert</div>
+									<div class="card-title">Success Aleeert</div>
 								</div>
 								<div class="card-body">
 									 <a href="javascript: void(0);"  id="alert-success" class="btn btn-primary btn-sm waves-effect waves-light">Click me</a>
@@ -69,9 +69,9 @@
 							</div>
 						</div>
 						<!-- /Alert -->
-						
+
 						<!-- Alert -->
-						<div class="col-md-4">	
+						<div class="col-md-4">
 							<div class="card">
 								<div class="card-header">
 									<div class="card-title">Error Alert</div>
@@ -82,9 +82,9 @@
 							</div>
 						</div>
 						<!-- /Alert -->
-						
+
 						<!-- Alert -->
-						<div class="col-md-4">	
+						<div class="col-md-4">
 							<div class="card">
 								<div class="card-header">
 									<div class="card-title">Warnng Alert</div>
@@ -95,9 +95,9 @@
 							</div>
 						</div>
 						<!-- /Alert -->
-						
+
 					</div>
-				
-				</div>			
+
+				</div>
 			</div>
 			<!-- /Page Wrapper -->
