--- a/src/app/all-modules/gestion-inquilinos/registros-inquilinos/registros-inquilinos.component.html
+++ b/src/app/all-modules/gestion-inquilinos/registros-inquilinos/registros-inquilinos.component.html
@@ -12,7 +12,7 @@
           </ul>
         </div>
         <div class="col-auto">
-          <a [routerLink]="'/customers/add-customer'" class="btn btn-primary me-2">
+          <a [routerLink]="'/inquilinos/add-inquilinos'" class="btn btn-primary me-2">
             <i class="fas fa-plus"></i>
           </a>
           <a
@@ -66,62 +66,46 @@
               >
                 <thead class="thead-light">
                   <tr>
-                    <th>Customer</th>
+                    <th>N°</th>
+                    <th>Inquilino</th>
                     <th>Email</th>
-                    <th>Amount Due</th>
-                    <th>Registered On</th>
+                    <th>Edad</th>
+                    <th>Sexo</th>
                     <th>Status</th>
-                    <th class="text-end">Actions</th>
+                    <th>Registrado</th>
+                    <th class="text-center">Actions</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let customer of customers; let i = index">
+                  <tr *ngFor="let row of inquilino; let i = index">
+                    <td>{{i + 1}}</td>
                     <td>
                       <h2 class="table-avatar">
-                        <a
-                          [routerLink]="'/profile'"
-                          class="avatar avatar-sm me-2"
-                          ><img
-                            class="avatar-img rounded-circle"
-                            src="assets/img/profiles/avatar-{{ i + 1 }}.jpg"
-                            alt="User Image"
-                        /></a>
-                        <a [routerLink]="'/profile'"
-                          >{{ customer.name
-                          }}<span>{{ customer.phone }}</span></a
-                        >
+                        <a href="#" class="avatar avatar-sm me-2">
+                          <img class="avatar-img rounded-circle"
+                            src="assets/img/profiles/{{row.foto}}"
+                            alt="User Image"/>
+                        </a>
+                        <a href="#" >{{row.nombre}} {{row.apellidos}}<span>{{row.celular}}</span></a>
                       </h2>
                     </td>
-                    <td>{{ customer.email }}</td>
-                    <td>{{ customer.amount_due }}</td>
-                    <td>{{ customer.registered_on | date: "dd MMM yyyy" }}</td>
+                    <td>{{row.email}}</td>
+                    <td>{{row.edad}}</td>
+                    <td>{{row.sexo}}</td>
                     <td>
-                      <span
-                        [ngClass]="
-                          customer.status === 'Active'
-                            ? 'badge badge-pill bg-success-light'
-                            : 'badge badge-pill bg-danger-light'
-                        "
-                        >{{ customer.status }}</span
-                      >
+                      <span *ngIf="row.estado === '1'" class="badge badge-pill bg-success-light">Activo</span>
+                      <span *ngIf="row.estado === '0'" class="badge badge-pill bg-danger-light">Inactivo</span>
                     </td>
-                    <td class="text-end">
-                      <a
-                        routerLink="/customers/edit-customer"
-                        [queryParams]="{ id: customer.id }"
-                        class="btn btn-sm btn-white text-success me-2"
-                        ><i class="far fa-edit me-1"></i> Edit</a
-                      >
-                      <a
-                        (click)="tempId = customer.id"
-                        data-bs-toggle="modal"
-                        data-bs-target="#delete_customer"
-                        class="btn btn-sm btn-white text-danger me-2"
-                        ><i class="far fa-trash-alt me-1"></i>Delete</a
-                      >
+                    <td>{{row.registrado}}</td>
+                    <td class="text-center">
+                      <a class="btn btn-sm btn-white text-success me-2" ><i class="far fa-edit me-1"></i></a>
+                      <button type="button" class="btn btn-sm btn-white text-danger me-2" (click)="deleteInquilino(row.id,row.nombre)"><i class="far fa-trash-alt me-1"></i></button>
                     </td>
                   </tr>
                 </tbody>
+
+
+
               </table>
             </div>
           </div>
