--- a/src/app/all-modules/ui interface/forms/form-mask/form-mask.component.html
+++ b/src/app/all-modules/ui interface/forms/form-mask/form-mask.component.html
@@ -26,7 +26,7 @@
                                 <div class="card-body">
                                     <form action="#">
                                         <div class="form-group">
-                                            <label>Phone</label>
+                                            <label>Phoneee</label>
                                             <input type="text" id="phone" class="form-control">
                                             <span class="form-text text-muted">(999) 999-9999</span>
                                         </div>
